--- a/config.toml
+++ b/config.toml
@@ -41,7 +41,7 @@ url = '/index.xml'
 
 [params]
 description = 'Nighlights for eocnomic analysis'
-footer = '&copy; [Parth Khare](https://www.cgdev.org/expert/parth-khare)-2021 | [Twitter](https://github.com/yihui) | [Data](https://parthkhare.github.io/)| [Twitter](https://twitter.com/parthakhare)'
+footer = '&copy; [Parth Khare](https://www.cgdev.org/expert/parth-khare)-2021| [Data](https://parthkhare.github.io/)| [Twitter](https://twitter.com/parthakhare)'
 github_edit = 'https://github.com/yihui/hugo-xmag/edit/master/exampleSite/content/'
 summary_length = 300
 [params.text]
